--- a/Quacker.Web/Pages/Privacy.cshtml
+++ b/Quacker.Web/Pages/Privacy.cshtml
@@ -5,4 +5,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
