--- a/Quacker.Web/Pages/Shared/_Layout.cshtml
+++ b/Quacker.Web/Pages/Shared/_Layout.cshtml
@@ -1,36 +1,74 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Quacker - @ViewData["Title"]</title>
+    @*Required meta tags*@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Quacker.Web</title>
+    @*stylesheets*@
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"  />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg qw-navbar navbar-dark">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Quacker.Web</a>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a class="navbar-brand" asp-area="" asp-page="/User/Home">
+                        <img src="~/imgs/duck-facing-right.svg" alt="duck facing right" class="qw-logo">
+                        Quacker
+                    </a>
+                }
+                else
+                {
+                    <a class="navbar-brand" asp-area="" asp-page="/Index">
+                        <img src="~/imgs/duck-facing-right.svg" alt="duck facing right" class="qw-logo">
+                        Quacker
+                    </a>
+                }
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+
+                <div class="navbar-collapse collapse">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <!-- SEARCH -->
+                            <form method="get" class="form-inline my-2 my-lg-0" asp-area="" asp-page="/User/Search">
+                                <input class="form-control mr-sm-2" type="text" placeholder="Search for users" name="SearchTerm">
+                                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                        </ul>
+
+                        <ul class="navbar-nav mt-2 mt-lg-0">
+                            <!-- HOME -->
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-page="/User/Home">Home</a>
+                            </li>
+                            <!-- MY POSTS -->
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-page="/Profile">My posts</a>
+                            </li>
+                            <!-- MESSAGES -->
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-page="/User/Messages">Messages</a>
+                            </li>
+                        </ul>
+
+                    }
+
                     <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
+
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container mt-4">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
