--- a/Quacker.Web/Pages/_ViewImports.cshtml
+++ b/Quacker.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using Quacker.Web
+@using Humanizer
 @namespace Quacker.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Quacker.Web
