--- a/Quacker.Web/Pages/User/Home.cshtml
+++ b/Quacker.Web/Pages/User/Home.cshtml
@@ -68,6 +68,7 @@
 
                     <div class="qw-post-footer mt-2">
                         <div class="qw-post-breads">
+                            <a class="qw-post-breads-btn" href="" data-ajax="true" data-ajax-method="post">Click here</a>
                             @if(post.HasCurrentUserLikedIt)
                             {
                                 <i class="fas fa-bread-slice fa-lg active"></i>
