--- a/Quacker.Web/Pages/Post.cshtml
+++ b/Quacker.Web/Pages/Post.cshtml
@@ -49,45 +49,64 @@
 
         <div class="qw-comment-section p-3 mb-3 qw-card">
             <h4>Comments</h4>
-            <div class="qw-add-comment">
-                @if (Model.CurrentUser.HasImage)
-                {
-                    <img class="qw-sm-profile" src="/imgs/users/@(Model.CurrentUser.Id).jpg">
-                }
-                else
-                {
-                    <img class="qw-sm-profile" src="/imgs/default.jpg">
-                }
-                <form>
-                    <textarea class="form-control" id="your-comment" rows="3"></textarea>
-                    <div class="d-flex flex-row justify-content-end mt-2">
-                        <button type="button" class="btn btn-light mr-2">Cancel</button>
-                        <button type="button" class="btn btn-primary">Post</button>
-                    </div>
-                </form>
-            </div>
 
-            <ul class="qw-comments">
-                @foreach (var comment in Model.Comments)
-                {
-                <li class="qw-comment py-2">
-                    @if (comment.Author.HasImage)
+            <div asp-validation-summary="All" class="text-danger"></div>
+
+            @if (User.Identity.IsAuthenticated)
+            {
+                <div class="qw-add-comment">
+                    @if (Model.CurrentUser.HasImage)
                     {
-                        <img class="qw-sm-profile" src="/imgs/users/@(comment.Author.Id).jpg">
+                        <img class="qw-sm-profile" src="/imgs/users/@(Model.CurrentUser.Id).jpg">
                     }
                     else
                     {
                         <img class="qw-sm-profile" src="/imgs/default.jpg">
                     }
-                    <a asp-page="/Profile" asp-route-id="@comment.Author.Id" class="qw-post-author">@comment.Author.DisplayName</a>
-                    <div class="qw-post-date">@comment.CreationDate.Humanize()</div>
-                    <div class="qw-comment-content">@comment.Content</div>
-                </li>
+                    <form asp-page-handler="CreateComment">
+                        <input type="hidden" asp-for="NewComment.PostId" />
+                        <textarea class="form-control" id="your-comment" rows="3" asp-for="NewComment.Content"></textarea>
+                        <span asp-validation-for="NewComment.Content" class="text-danger"></span>
+                        <div class="d-flex flex-row justify-content-end mt-2">
+                            @*<button type="button" class="btn btn-light mr-2">Cancel</button>*@
+                            <button type="submit" class="btn btn-primary">Post</button>
+                        </div>
+                    </form>
+                </div>
+            }
+
+
+            <ul class="qw-comments">
+                @foreach (var comment in Model.Comments)
+                {
+                    <li class="qw-comment py-2">
+                        @if (comment.Author.HasImage)
+                        {
+                            <img class="qw-sm-profile" src="/imgs/users/@(comment.Author.Id).jpg">
+                        }
+                        else
+                        {
+                            <img class="qw-sm-profile" src="/imgs/default.jpg">
+                        }
+                        <a asp-page="/Profile" asp-route-id="@comment.Author.Id" class="qw-post-author">@comment.Author.DisplayName</a>
+                        <div class="qw-post-date">@comment.CreationDate.Humanize()</div>
+                        <div class="qw-comment-content">@comment.Content</div>
+                        <div class="qw-user-buttons">
+                            <form asp-page-handler="DeleteComment">
+                                <input type="hidden" asp-for="DeleteCommentId" value="@comment.Id" />
+                                <input type="hidden" asp-for="Id" />
+                                <button type="submit" class="btn btn-danger ml-3">Delete</button>
+                            </form>
+                        </div>
+                    </li>
                 }
             </ul>
-
-
 
         </div>
     </div>
 </div>
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
