--- a/Quacker.Web/wwwroot/css/site.css
+++ b/Quacker.Web/wwwroot/css/site.css
@@ -191,7 +191,10 @@ Own CSS */
         flex: 0 0 50%;
         max-width: 50%;
     }
-
+    .qw-post .qw-post-footer .qw-post-breads-btn{
+        z-index: 1;
+        position: relative;
+    }
     .qw-post .qw-post-footer .fas {
         color: #999;
     }
@@ -205,6 +208,8 @@ Own CSS */
 }
 
     .qw-post .qw-post-link {
+        top: 0;
+        left: 0;
         position: absolute;
         width: 100%;
         height: 100%;
@@ -301,19 +306,22 @@ Own CSS */
         align-self: center;
     }
 
-    .qw-user .qw-user-buttons {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-        grid-column: 3;
-        grid-row-start: 1;
-        grid-row-end: 3;
-    }
+.qw-user-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    grid-column: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
 
-        .qw-user .qw-user-buttons span {
-            z-index: 1;
-        }
+    .qw-user-buttons span {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        z-index: 1;
+    }
 
 
 /* Other user profile page */
