--- a/Quacker.Web/Pages/User/Home.cshtml
+++ b/Quacker.Web/Pages/User/Home.cshtml
@@ -13,6 +13,13 @@
         </h4>
 
         <ul class="qw-follow-list">
+            @if (Model.FollowedUsers.Count == 0)
+            {
+                <div class="text-muted">You don't follow any people yet!</div>
+                <div class="d-flex justify-content-center" style="width: 100%;">
+                    <img style="width: 120px;" src="/imgs/duck-following.png">
+                </div>
+            }
             @foreach (var user in Model.FollowedUsers)
             {
                 <li class="mt-2">
@@ -40,49 +47,18 @@
             @Model.Posts.AllResultsCount result found
         </h4>*@
         <ul class="qw-posts mt-4">
+            @if(Model.Posts.AllResultsCount == 0)
+            {
+                <div class="d-flex justify-content-center" style="width: 100%;">
+                    <div class="text-muted">We couldn't find any quacks for you! :(</div>
+                </div>
+            }
             @foreach (var post in Model.Posts.Results)
             {
                 <li class="qw-post p-3 qw-clickable-card mb-3">
                     <a class="qw-post-link" asp-page="/Post" asp-route-id="@post.Id"></a>
-                    <div class="qw-post-header">
-                        @if (post.Author.HasImage)
-                        {
-                            <img class="qw-sm-profile" src="/imgs/users/@(post.Author.Id).jpg">
-                        }
-                        else
-                        {
-                            <img class="qw-sm-profile" src="/imgs/default.jpg">
-                        }
-                        <a asp-page="/Profile" asp-route-id="@post.Author.Id" class="qw-post-author">@post.Author.DisplayName</a>
-                        <div class="qw-post-date">@post.CreationDate.Humanize()</div>
-                    </div>
-
-                    <div class="qw-post-content">
-                        @post.Content
-                        @if (post.HasImage)
-                        {
-                            <img src="/imgs/posts/@post.Author.Id/@(post.Id).jpg">
-                        }
-                    </div>
-
-
-                    <div class="qw-post-footer mt-2">
-                        <div class="qw-post-breads">
-                            <a class="qw-post-breads-btn" href="" data-ajax="true" data-ajax-method="post">Click here</a>
-                            @if(post.HasCurrentUserLikedIt)
-                            {
-                                <i class="fas fa-bread-slice fa-lg active"></i>
-                            } else
-                            {
-                                <i class="fas fa-bread-slice fa-lg"></i>
-                            }
-                            @post.NumberOfLikes
-                        </div>
-                        <div class="qw-post-comments">
-                            <i class="fas fa-comment fa-lg"></i>
-                            @post.NumberOfComments
-                        </div>
-                    </div>
+                    <vc:post post="post" is-deletable="@false" user-id="0" delete-post-id="0">
+                    </vc:post>
                 </li>
             }
         </ul>
