--- a/Quacker.Web/Pages/User/Search.cshtml
+++ b/Quacker.Web/Pages/User/Search.cshtml
@@ -30,7 +30,9 @@
                             {
                                 <strong class="ml-3">Followed</strong>
                             }
-                            <button type="button" class="btn btn-primary ml-3 my-1">Direct message</button>
+                            <a asp-page="/User/Messages" asp-route-id="@user.Id" class="btn btn-primary ml-3 my-1">
+                                Direct message
+                            </a>
                         </span>
                     </div>
                 </li>
