--- a/Quacker.Web/wwwroot/css/site.css
+++ b/Quacker.Web/wwwroot/css/site.css
@@ -68,6 +68,7 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+  background-color: black;
 }
 
 /*
@@ -173,6 +174,7 @@ Own CSS */
     }
 
 .qw-post .qw-post-content {
+    word-break: break-all;
     margin-left: 52px;
 }
 
@@ -256,6 +258,7 @@ Own CSS */
     }
 
     .qw-comment .qw-comment-content {
+        word-break: break-all;
         grid-column-start: 2;
         grid-column-end: 3;
     }
@@ -396,6 +399,7 @@ Own CSS */
     display: flex;
     flex-direction: column;
     overflow: auto;
+    scroll-behavior: smooth;
 }
 
 .qw-dm {
@@ -428,3 +432,45 @@ Own CSS */
 .qw-logout {
     border-radius: 0;
 }
+
+/* Welcome page! */
+.qw-main-bg {
+    width: 100%;
+    height: calc(100vh - 60px - 60px);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 120, 0.7)), url('https://www.janogarciapsicologo.es/images/peritajes-familiares.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.qw-main-center {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+    .qw-main-center h1 {
+        color: white;
+    }
+
+
+@media (max-width: 991.98px) {
+    .qw-main-center h1 {
+        font-size: 48px;
+    }
+}
+
+@media (max-width: 844.98px) {
+    .qw-main-bg {
+        height: calc(100vh - 60px - 55px);
+    }
+}
+
+@media (max-width: 575.98px) {
+    .qw-main-center h1 {
+        font-size: 30px;
+    }
+}
+
